crates/lute-compile/tests/snapshots/e2e__affinity_reaction.snap
---
source: crates/lute-compile/tests/e2e.rs
expression: json
---
{
  "kind": "scene",
  "lute": "0.36.6",
  "irVersion": "0.36.6",
  "capabilityVersion": "f78bb8efcaab8c3ea4ccf1bbee976a80596a04b1aca59fbe74123abfa1f55225",
  "requiredSemantics": [
    "lute.core/1"
  ],
  "meta": {
    "id": "demo.s01ep01",
    "character": "demo",
    "season": 1,
    "episode": 1,
    "episodeId": "s01ep01"
  },
  "state": [
    {
      "path": "run.blessed",
      "type": "bool",
      "default": false
    },
    {
      "path": "scene.affect.marina",
      "type": "int",
      "default": 0
    },
    {
      "path": "scene.tier",
      "type": "enum",
      "domain": [
        "cold",
        "warm",
        "fond"
      ],
      "default": "cold"
    }
  ],
  "enums": [
    {
      "name": "action",
      "members": [
        "fadeInUp",
        "fadeInSlow",
        "slideInLeft",
        "walkIn",
        "idle",
        "wave",
        "sway",
        "lean",
        "poseTurn",
        "fadeOut",
        "fadeOutDown",
        "fadeOutSlow",
        "hide"
      ]
    },
    {
      "name": "anchor",
      "members": [
        "left",
        "center",
        "right"
      ]
    },
    {
      "name": "emotion",
      "members": [
        "neutral",
        "surprised",
        "delighted",
        "shy",
        "content",
        "angry",
        "sad"
      ]
    },
    {
      "name": "mood",
      "members": [
        "peaceful",
        "tense",
        "romantic",
        "sad",
        "upbeat"
      ]
    },
    {
      "name": "musicAction",
      "members": [
        "start",
        "change",
        "stop",
        "resume",
        "fadeOut"
      ]
    },
    {
      "name": "vfxType",
      "members": [
        "whiteOut",
        "blackOut",
        "rain",
        "snow",
        "leaves",
        "petals",
        "raindrop"
      ]
    },
    {
      "name": "volume",
      "members": [
        "silent",
        "down",
        "normal",
        "up",
        "full"
      ]
    }
  ],
  "commands": [
    {
      "kind": "match",
      "addr": "001-0100",
      "subject": {
        "cel": "scene.affect.marina",
        "expr": {
          "path": "scene.affect.marina"
        }
      },
      "arms": [
        {
          "is": "3..",
          "test": {
            "cel": "(scene.affect.marina >= 3)",
            "expr": {
              "op": ">=",
              "l": {
                "path": "scene.affect.marina"
              },
              "r": {
                "int": 3
              }
            },
            "authored": "is=3.."
          },
          "target": "001-0200"
        },
        {
          "is": "1..",
          "test": {
            "cel": "(scene.affect.marina >= 1)",
            "expr": {
              "op": ">=",
              "l": {
                "path": "scene.affect.marina"
              },
              "r": {
                "int": 1
              }
            },
            "authored": "is=1.."
          },
          "target": "001-0400"
        }
      ],
      "otherwise": "001-0600",
      "converge": "001-0800"
    },
    {
      "kind": "line",
      "addr": "001-0200",
      "role": "dialogue",
      "speaker": "marina",
      "text": "You remembered! You actually remembered.",
      "emotion": "delighted",
      "lineId": "demo.s01ep01.reaction#1.marina_0010",
      "voiceKey": "demo.s01ep01.reaction#1.marina-0010",
      "source": {
        "component": "reaction"
      }
    },
    {
      "kind": "jump",
      "addr": "001-0300",
      "target": "001-0800"
    },
    {
      "kind": "line",
      "addr": "001-0400",
      "role": "dialogue",
      "speaker": "marina",
      "text": "Not bad at all, Mr. Fixer.",
      "emotion": "content",
      "lineId": "demo.s01ep01.reaction#2.marina_0020",
      "voiceKey": "demo.s01ep01.reaction#2.marina-0020",
      "source": {
        "component": "reaction"
      }
    },
    {
      "kind": "jump",
      "addr": "001-0500",
      "target": "001-0800"
    },
    {
      "kind": "line",
      "addr": "001-0600",
      "role": "dialogue",
      "speaker": "marina",
      "text": "...Shall we begin?",
      "emotion": "neutral",
      "lineId": "demo.s01ep01.reaction#3.marina_0030",
      "voiceKey": "demo.s01ep01.reaction#3.marina-0030",
      "source": {
        "component": "reaction"
      }
    },
    {
      "kind": "jump",
      "addr": "001-0700",
      "target": "001-0800"
    },
    {
      "kind": "match",
      "addr": "002-0100",
      "subject": {
        "cel": "(scene.tier)",
        "expr": {
          "path": "scene.tier"
        },
        "authored": "@currentTier"
      },
      "arms": [
        {
          "is": "fond",
          "test": {
            "cel": "(scene.tier == \"fond\")",
            "expr": {
              "op": "==",
              "l": {
                "path": "scene.tier"
              },
              "r": {
                "string": "fond"
              }
            },
            "authored": "is=fond"
          },
          "target": "002-0200"
        },
        {
          "is": "warm",
          "test": {
            "cel": "(scene.tier == \"warm\")",
            "expr": {
              "op": "==",
              "l": {
                "path": "scene.tier"
              },
              "r": {
                "string": "warm"
              }
            },
            "authored": "is=warm"
          },
          "target": "002-0400"
        },
        {
          "is": "cold",
          "test": {
            "cel": "(scene.tier == \"cold\")",
            "expr": {
              "op": "==",
              "l": {
                "path": "scene.tier"
              },
              "r": {
                "string": "cold"
              }
            },
            "authored": "is=cold"
          },
          "target": "002-0600"
        }
      ],
      "converge": "002-0800",
      "source": {
        "component": "reaction"
      }
    },
    {
      "kind": "line",
      "addr": "002-0200",
      "role": "dialogue",
      "speaker": "marina",
      "text": "You remembered! You actually remembered.",
      "emotion": "delighted",
      "lineId": "demo.s01ep01.reaction#4.marina_0010",
      "voiceKey": "demo.s01ep01.reaction#4.marina-0010",
      "source": {
        "component": "reaction"
      }
    },
    {
      "kind": "jump",
      "addr": "002-0300",
      "target": "002-0800"
    },
    {
      "kind": "line",
      "addr": "002-0400",
      "role": "dialogue",
      "speaker": "marina",
      "text": "Not bad at all, Mr. Fixer.",
      "emotion": "content",
      "lineId": "demo.s01ep01.reaction#4.marina_0020",
      "voiceKey": "demo.s01ep01.reaction#4.marina-0020",
      "source": {
        "component": "reaction"
      }
    },
    {
      "kind": "jump",
      "addr": "002-0500",
      "target": "002-0800"
    },
    {
      "kind": "line",
      "addr": "002-0600",
      "role": "dialogue",
      "speaker": "marina",
      "text": "...Shall we begin?",
      "emotion": "neutral",
      "lineId": "demo.s01ep01.reaction#4.marina_0030",
      "voiceKey": "demo.s01ep01.reaction#4.marina-0030",
      "source": {
        "component": "reaction"
      }
    },
    {
      "kind": "jump",
      "addr": "002-0700",
      "target": "002-0800"
    }
  ],
  "shots": [
    {
      "shot": 1,
      "heading": "Literal Tier Dispatch"
    },
    {
      "shot": 2,
      "heading": "Dynamic Tier Dispatch"
    }
  ],
  "outsideRun": [],
  "celEnv": {
    "variables": [
      {
        "name": "scene",
        "type": "map(string, dyn)"
      }
    ],
    "functions": []
  }
}
