crates/lute-compile/tests/snapshots/e2e__beat_achilles_gift.snap
---
source: crates/lute-compile/tests/e2e.rs
expression: json
---
{
  "kind": "scene",
  "lute": "0.30.0",
  "irVersion": "0.30.0",
  "capabilityVersion": "ab1fc53850ae8e585b54639fcd0677bf05af561c2be4a55609a1a0b968519319",
  "meta": {
    "id": "hades.achilles.run12",
    "title": "A gift from Achilles",
    "beat": {
      "on": "talk",
      "target": "npc.achilles",
      "when": {
        "raw": "user.runs >= 10 && (user.patroclusNamed)",
        "expr": {
          "op": "&&",
          "l": {
            "op": ">=",
            "l": {
              "path": "user.runs"
            },
            "r": {
              "lit": 10.0
            }
          },
          "r": {
            "path": "user.patroclusNamed"
          }
        }
      },
      "priority": 50,
      "once": "user"
    }
  },
  "state": [
    {
      "path": "run.giftTaken",
      "type": "bool",
      "default": false
    },
    {
      "path": "scene.choices.gift",
      "type": "enum",
      "domain": [
        "accept",
        "refuse",
        "unset"
      ],
      "default": "unset",
      "provenance": "branch:gift"
    },
    {
      "path": "user.patroclusNamed",
      "type": "bool",
      "default": false
    },
    {
      "path": "user.runs",
      "type": "number",
      "default": 0
    }
  ],
  "commands": [
    {
      "kind": "line",
      "addr": "001-0100",
      "role": "dialogue",
      "speaker": "achilles",
      "text": "You've come back again, lad. Take this.",
      "lineId": "hades.achilles.run12.achilles_0010",
      "voiceKey": "hades.achilles.run12.achilles-0010"
    },
    {
      "kind": "choice",
      "addr": "001-0200",
      "branchId": "gift",
      "recordKey": "scene.choices.gift",
      "options": [
        {
          "id": "accept",
          "label": "Take it",
          "lineId": "hades.achilles.run12.gift.accept",
          "target": "001-0300"
        },
        {
          "id": "refuse",
          "label": "Not now",
          "lineId": "hades.achilles.run12.gift.refuse",
          "target": "001-0600"
        }
      ],
      "converge": "001-0800"
    },
    {
      "kind": "set",
      "addr": "001-0300",
      "path": "run.giftTaken",
      "op": "=",
      "value": "true",
      "expr": {
        "lit": true
      }
    },
    {
      "kind": "line",
      "addr": "001-0400",
      "role": "dialogue",
      "speaker": "achilles",
      "text": "Use it well.",
      "lineId": "hades.achilles.run12.achilles_0020",
      "voiceKey": "hades.achilles.run12.achilles-0020"
    },
    {
      "kind": "jump",
      "addr": "001-0500",
      "target": "001-0800"
    },
    {
      "kind": "line",
      "addr": "001-0600",
      "role": "dialogue",
      "speaker": "achilles",
      "text": "Suit yourself.",
      "lineId": "hades.achilles.run12.achilles_0030",
      "voiceKey": "hades.achilles.run12.achilles-0030"
    },
    {
      "kind": "jump",
      "addr": "001-0700",
      "target": "001-0800"
    }
  ],
  "shots": [
    {
      "shot": 1,
      "heading": "The gift"
    }
  ]
}
