crates/lute-compile/tests/snapshots/e2e__components_scene.snap
---
source: crates/lute-compile/tests/e2e.rs
expression: json
---
{
  "kind": "scene",
  "lute": "0.36.1",
  "irVersion": "0.36.1",
  "capabilityVersion": "f78bb8efcaab8c3ea4ccf1bbee976a80596a04b1aca59fbe74123abfa1f55225",
  "requiredSemantics": [
    "lute.core/1",
    "lute.staging/1"
  ],
  "meta": {
    "id": "demo.s01ep02",
    "character": "demo",
    "season": 1,
    "episode": 2,
    "episodeId": "s01ep02"
  },
  "state": [
    {
      "path": "run.blessed",
      "type": "bool",
      "default": false
    }
  ],
  "enums": [
    {
      "name": "action",
      "members": [
        "fadeInUp",
        "fadeInSlow",
        "slideInLeft",
        "walkIn",
        "idle",
        "wave",
        "sway",
        "lean",
        "poseTurn",
        "fadeOut",
        "fadeOutDown",
        "fadeOutSlow",
        "hide"
      ]
    },
    {
      "name": "anchor",
      "members": [
        "left",
        "center",
        "right"
      ]
    },
    {
      "name": "emotion",
      "members": [
        "neutral",
        "surprised",
        "delighted",
        "shy",
        "content",
        "angry",
        "sad"
      ]
    },
    {
      "name": "mood",
      "members": [
        "peaceful",
        "tense",
        "romantic",
        "sad",
        "upbeat"
      ]
    },
    {
      "name": "musicAction",
      "members": [
        "start",
        "change",
        "stop",
        "resume",
        "fadeOut"
      ]
    },
    {
      "name": "vfxType",
      "members": [
        "whiteOut",
        "blackOut",
        "rain",
        "snow",
        "leaves",
        "petals",
        "raindrop"
      ]
    },
    {
      "name": "volume",
      "members": [
        "silent",
        "down",
        "normal",
        "up",
        "full"
      ]
    }
  ],
  "commands": [
    {
      "kind": "sprite",
      "addr": "001-0100",
      "character": "marina",
      "action": "fadeInUp",
      "source": {
        "component": "greet"
      }
    },
    {
      "kind": "sprite",
      "addr": "001-0200",
      "character": "marina",
      "anchor": "center",
      "provenance": {
        "injected": true,
        "by": "auto-anchor-on-show",
        "explanation": "`marina` shown without an explicit anchor; defaulting to `center`"
      },
      "source": {
        "component": "greet"
      }
    },
    {
      "kind": "line",
      "addr": "001-0300",
      "role": "narration",
      "speaker": "narrator",
      "text": "A familiar face steps into the light.",
      "lineId": "demo.s01ep02.greet#1.narrator_0010",
      "source": {
        "component": "greet"
      }
    },
    {
      "kind": "line",
      "addr": "001-0400",
      "role": "narration",
      "speaker": "narrator",
      "text": "And the scene carries on.",
      "lineId": "demo.s01ep02.narrator_0010"
    }
  ],
  "shots": [
    {
      "shot": 1,
      "heading": "Greeting by Component"
    }
  ],
  "outsideRun": [],
  "celEnv": {
    "variables": [],
    "functions": []
  }
}
