crates/lute-compile/tests/snapshots/e2e__connected_quest.snap
---
source: crates/lute-compile/tests/e2e.rs
expression: json
---
{
  "kind": "quest",
  "lute": "0.27.0",
  "irVersion": "0.27.0",
  "capabilityVersion": "ab1fc53850ae8e585b54639fcd0677bf05af561c2be4a55609a1a0b968519319",
  "meta": {},
  "state": [
    {
      "path": "quest.overlookReturn.activatedAt",
      "type": "narrativeTime",
      "provenance": "quest:overlookReturn"
    },
    {
      "path": "quest.overlookReturn.objectives.returned.done",
      "type": "bool",
      "default": false,
      "provenance": "quest:overlookReturn"
    },
    {
      "path": "quest.overlookReturn.state",
      "type": "enum",
      "domain": [
        "active",
        "complete",
        "failed",
        "unset"
      ],
      "provenance": "quest:overlookReturn"
    },
    {
      "path": "run.returnedToOverlook",
      "type": "bool",
      "default": false
    }
  ],
  "commands": [
    {
      "kind": "quest",
      "addr": "001-0100",
      "id": "overlookReturn",
      "title": "Return to the Overlook",
      "titleLineId": "overlookReturn.title",
      "start": {
        "raw": "true",
        "expr": {
          "lit": true
        }
      },
      "objectives": [
        {
          "id": "returned",
          "title": "Return to the overlook",
          "titleLineId": "overlookReturn.returned",
          "done": {
            "raw": "run.returnedToOverlook",
            "expr": {
              "path": "run.returnedToOverlook"
            }
          },
          "optional": false,
          "body": null
        }
      ],
      "tier": "run"
    }
  ],
  "prereqEdges": [
    {
      "node": "overlookReturn",
      "follows": "visited('kestrel.s01ep01')"
    }
  ]
}
