crates/lute-compile/tests/snapshots/e2e__gated_line.snap
---
source: crates/lute-compile/tests/e2e.rs
expression: json
---
{
  "kind": "scene",
  "lute": "0.27.0",
  "irVersion": "0.27.0",
  "capabilityVersion": "ab1fc53850ae8e585b54639fcd0677bf05af561c2be4a55609a1a0b968519319",
  "meta": {
    "id": "elena.s01ep05",
    "character": "elena",
    "season": 1,
    "episode": 5,
    "episodeId": "s01ep05",
    "title": "The gated line"
  },
  "state": [
    {
      "path": "run.metHelpfully",
      "type": "bool",
      "default": false
    }
  ],
  "commands": [
    {
      "kind": "match",
      "addr": "001-0100",
      "subject": "run.metHelpfully",
      "arms": [
        {
          "test": "run.metHelpfully",
          "target": "001-0200",
          "expr": {
            "path": "run.metHelpfully"
          }
        }
      ],
      "otherwise": "001-0400",
      "converge": "001-0500"
    },
    {
      "kind": "line",
      "addr": "001-0200",
      "role": "dialogue",
      "speaker": "elena",
      "text": "You helped me back then. I've been meaning to thank you.",
      "lineId": "elena.s01ep05.elena_0010",
      "voiceKey": "elena.s01ep05.elena-0010"
    },
    {
      "kind": "jump",
      "addr": "001-0300",
      "target": "001-0500"
    },
    {
      "kind": "jump",
      "addr": "001-0400",
      "target": "001-0500"
    },
    {
      "kind": "match",
      "addr": "002-0100",
      "subject": "run.metHelpfully",
      "arms": [
        {
          "test": "run.metHelpfully",
          "target": "002-0200",
          "expr": {
            "path": "run.metHelpfully"
          }
        }
      ],
      "otherwise": "002-0400",
      "converge": "002-0500"
    },
    {
      "kind": "line",
      "addr": "002-0200",
      "role": "dialogue",
      "speaker": "elena",
      "text": "You helped me back then. I've been meaning to thank you.",
      "lineId": "elena.s01ep05.elena_0020",
      "voiceKey": "elena.s01ep05.elena-0020"
    },
    {
      "kind": "jump",
      "addr": "002-0300",
      "target": "002-0500"
    },
    {
      "kind": "jump",
      "addr": "002-0400",
      "target": "002-0500"
    }
  ],
  "shots": [
    {
      "shot": 1,
      "heading": "The Sugar Form"
    },
    {
      "shot": 2,
      "heading": "The Explicit Twin"
    }
  ]
}
